[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-invoice-audit"
version = "1.0.0"
description = "OpenEnv benchmark for procurement invoice audit workflows."
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "openai==2.7.2",
  "pyyaml==6.0.2",
  "openenv-core==0.2.0",
]

[project.scripts]
server = "uvicorn.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
